crates/toml/tests/snapshots/invalid/ext/integer/invalid-hex-3.stderr
TOML parse error at line 1, column 7
  |
1 | a = 0x-1
  |       ^
invalid hexadecimal integer
